--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "nodemon app.js",
-    "dev": "nodemon app.js"
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "husky": {
     "hooks": {
@@ -25,13 +25,11 @@
     ]
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.4.1",
     "mongoose": "^5.11.16",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@ryuuto829/eslint-config-with-prettier": "^0.2.0",
