build: add jest, mongodb-memory-server, supertest

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "start": "nodemon server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest --watchAll --coverage --verbose --silent --runInBand --env node"
   },
   "husky": {
     "hooks": {
@@ -22,6 +23,12 @@
     ],
     "*.js": [
       "eslint --fix"
+    ]
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/"
     ]
   },
   "dependencies": {
@@ -38,7 +45,10 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "mongodb-memory-server": "^6.9.3",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3"
   }
 }
