--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.16",
