--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "postcss src/css/index.css -o src/App.css",
-    "watch:css": "postcss src/css/index.css -o src/App.css --watch"
+    "build:css": "postcss src/styles/index.css -o src/App.css",
+    "watch:css": "postcss src/styles/index.css -o src/App.css --watch"
   },
   "husky": {
     "hooks": {
@@ -47,6 +47,7 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
