--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,23 @@
     "build:css": "postcss src/styles/index.css -o src/styles/App.css",
     "watch:css": "postcss src/styles/index.css -o src/styles/App.css --watch"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    },
+    "coverageReporters": [
+      "html",
+      "text"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -48,6 +65,7 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "@szhsin/react-menu": "^1.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
