--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^1.0.2",
     "react-map-gl": "^6.1.10",
     "react-scripts": "4.0.2",
