--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^0.21.1",
     "cntl": "^1.0.0",
     "react": "^17.0.1",
@@ -77,6 +78,7 @@
     "react-hot-toast": "^1.0.2",
     "react-map-gl": "^6.1.10",
     "react-scripts": "4.0.2",
+    "tippy.js": "^6.3.7",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
