--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest --watchAll --coverage --verbose --silent --runInBand --env node"
   },
