--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:css": "postcss src/styles/index.css -o src/styles/App.css",
+    "build:css": "postcss src/styles/index.css -o src/styles/App.css --minify",
     "watch:css": "postcss src/styles/index.css -o src/styles/App.css --watch"
   },
   "jest": {
@@ -95,6 +95,7 @@
     "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "worker-loader": "^3.0.8"
   }
 }
