--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.16",
     "morgan": "^1.10.0",
@@ -60,6 +61,7 @@
     "lint-staged": "^10.5.3",
     "mongodb-memory-server": "^6.9.3",
     "prettier": "^2.2.1",
+    "rate-limit-mongo": "^2.3.2",
     "supertest": "^6.1.3"
   }
 }
