chore: update netlify and heroku settings

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -5,3 +5,9 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[redirects]]
+  from = "/api/*"
+  to = "https://journey-log-server.herokuapp.com/"
+  status = 200
+  force = true
