--- a/client/package.json
+++ b/client/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "client",
+  "name": "travel-note-client",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^6.0.0",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "autoprefixer": "^9",
-    "mapbox-gl": "^2.0.1",
-    "postcss": "^7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "web-vitals": "^0.2.4"
-  },
+  "description": "React client for travel note",
+  "keywords": [
+    "react",
+    "tailwindcss",
+    "journey-log"
+  ],
+  "license": "MIT",
+  "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/css/index.css -o src/App.css",
+    "watch:css": "postcss src/css/index.css -o src/App.css --watch"
   },
   "husky": {
     "hooks": {
@@ -49,18 +43,32 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.2",
+    "web-vitals": "^1.0.1"
+  },
   "devDependencies": {
-    "@ryuuto829/eslint-config-with-prettier": "^0.2.0",
+    "@ryuuto829/eslint-config-with-prettier": "^0.3.0",
+    "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-app": "^6.2.2",
-    "eslint-plugin-testing-library": "^3.10.1",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4",
+    "postcss": "^8.2.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.0.3"
   }
 }
