--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "nodemon app.js",
+    "dev": "nodemon app.js"
   },
   "husky": {
     "hooks": {
@@ -24,6 +24,15 @@
       "eslint --fix"
     ]
   },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "mongoose": "^5.11.16",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7"
+  },
   "devDependencies": {
     "@ryuuto829/eslint-config-with-prettier": "^0.2.0",
     "babel-eslint": "^10.1.0",
@@ -33,12 +42,5 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "helmet": "^4.4.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
   }
 }
