feat: add cors and morgan, update server config
* Add port config and cors origin
* Add deps
* Update package.json meta

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,1 +1,5 @@
 MONGO_DB_CONNECT=string
+JWT_TOKEN_SECRET=string
+JWT_TOKEN_EXPIRES_IN=number-of-minutes
+CORS_ORIGIN=http://localhost:3000
+PORT=8080
