--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "express.js",
     "jest",
     "mongoose",
-    "journey-log"
+    "travel-note"
   ],
   "license": "MIT",
   "main": "app.js",
