--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "keywords": [
     "react",
     "tailwindcss",
-    "journey-log"
+    "travel-note"
   ],
   "license": "MIT",
   "proxy": "http://localhost:8080",
